Create loginSuccess page and move payment text to loginSuccess. Correct all old payment routes to new loginSuccess page.  Add new route for order confirmaition

--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -16,6 +16,6 @@
 		<span class="brand-name">AssistU</span>
 	</a>
 	<a href="/login">
-		<h6 class="sign-in-up">Sign In or Sign Up</h6>
+		<h4 class="sign-in-up">Sign In</h4>
 	</a>
 </nav>
