--- a/views/register.ejs
+++ b/views/register.ejs
@@ -225,10 +225,10 @@
 				style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:1rem; width: 30%; margin: 1rem 0;"
 				class="btn btn-warning text-centre"
 			>
-				Sign Up!
+				Register!
 			</button>
 		</div>
-		<p class="text-center" style="font-family: 'Domine', serif;;">Already Registered? <a href=       "/login" style="font-family: 'Fredoka One', cursive; color:#63032e; text-decoration: none;">Sign-in!</a></p>
+		<p class="text-center" style="font-family: 'Domine', serif;;">Already Registered? <a href=       "/login" style="font-family: 'Fredoka One', cursive; color:#63032e; text-decoration: none;">Sign In!</a></p>
 	</form>
 </div>
 
