--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -1,61 +1,65 @@
 <%- include("partials/header") -%>
+<!-- Alt Header begins -->
+
+<!-- <img style="width: 100%; z-index: -1; position: absolute; left: 0;" src="images/payment-background.png" alt="" /> -->
+<div class="media" style="position: relative; margin-bottom: 4rem;">
+	<img
+		src="images/SignUp-Bkgd.png"
+		class="img-responsive login-bg-img"
+		alt="..."
+		style="z-index: -1 !important;"
+	/>
+	<div>
+		<a href="/">
+			<img
+				src="/images/helpingHands.png"
+				width="100"
+				height="100"
+				class="logo-img reg-logo"
+				alt="logo-assistU"
+			/>
+		</a>
+		<h1 class="reg-quote1">AssistU</h1>
+		<h2 class="reg-quote2">Maximize Your Time</h2>
+	</div>
+</div>
+<!-- Alt Header ends -->
 
 <!-- payment section begins -->
-<img
-	style="width: 100%; z-index: -1; position: absolute;"
-	src="images/payment-background.png"
-	alt=""
-/>
 <div style="z-index: 0;" class="container border border-dark shadow register-box text-left">
 	<h2 style="text-align: center !important;">Payment</h2>
-	<form action="/login" method="post">
-		<h5 style="text-align: center !important;">AssistU</h5>
-		<h6 style="text-align: center !important;">Your Total</h6>
-		<h6 style="text-align: center !important;">$177</h6>
-		<div class="row-btn text-center">
-			<a
-				class="btn btn-lg btn-outline-warning"
-				href=""
-				style="border: 1.5px #F9D276 solid; font-family: 'Fredoka One', cursive; color: #63032e; text-decoration: none; border-radius: 1rem;"
-				>Credit</a
-			>
-			<a
-				class="btn btn-lg btn-outline-warning"
-				href="/register"
-				style="border: 1.5px #F9D276 solid; font-family: 'Fredoka One', cursive; color: #63032e; text-decoration: none; border-radius: 1rem;"
-				>Cash</a
-			>
-			<div>
-				<h5 style="text-align: center !important;">Cart</h5>
-				<div>
-					<h6>Fixer Identity Service</h6>
-					<p># of Hours</p>
-				</div>
-				<div>
-					<h6>$75</h6>
-				</div>
-			</div>
-			<div>
-				<div>
-					<h6>Fixer Identity Service</h6>
-					<p># of Hours</p>
-				</div>
-				<div>
-					<h6>$102</h6>
-				</div>
-				<h5 style="text-align: center !important;">Total $177</h5>
-			</div>
 
+	<form action="/login" method="post">
+		<div class="row-btn text-center">
+			<div class="col">
+				<h5 style="text-align: left !important;">Cart</h5>
+				<div class="row">
+					<div class="col">
+						<h6 style="text-align: left !important;">Fixer Company Name</h6>
+						<p style="text-align: left !important;"># of Hours</p>
+					</div>
+					<div class="row">
+						<h6 class="hourly-rate">$102</h6>
+						<h6 class="hourly-rate">per hour</h6>
+					</div>
+				</div>
+				<!-- </div> -->
+				<div class="row" style="text-align: center !important;">
+					<h5 style="text-align: left !important;">Total</h5>
+					<br />
+					<h5 style="text-align: right !important;" class="order-total">$177</h5>
+				</div>
+			</div>
 			<button
 				type="submit"
 				class="btn btn-lg btn-warning"
-				style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0; border-radius: 1rem; width: 7.5rem;"
+				style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0; border-radius: 1rem;"
 			>
 				Confirm Cash Payment
 			</button>
 			<p>
 				<a
-					href="mailto:assistupro@gmail.com"
+					href="/"
 					style="font-family: 'Fredoka One', cursive; color: #63032e; text-decoration: underline dotted #63032e;"
 					>Cancel Order</a
 				>
