connect payment details page to confirmation page

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -29,7 +29,7 @@
 <div style="z-index: 0;" class="container border border-dark shadow register-box text-left">
 	<h2 style="text-align: center !important;">Payment Summary</h2>
 	<h5>Cart</h5>
-	<form action="/TBD" method="post">
+	<form action="/bookingCashConfirm" method="post">
 		<div class="container">
 			<div class="row">
 				<div class="col">
