Create orderHistoryPage branch, add button to navbarLogin.ejs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,14 @@ textarea{
 	padding-left: 1.5rem !important;
 }
 
+.assistuBtn {
+border-radius: 3rem;
+background-color: #f9d276;
+font-family:  'Fredoka One', cursive;
+color: #63032e;
+opacity: 0.8;
+}
+
 /*! Landing Page */
 
 .sec-title {
