--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -15,7 +15,17 @@
 		/>
 		<span class="brand-name">AssistU</span>
 	</a>
-	<a href="/login">
+	<!-- <a href="/login">
 		<h4 class="sign-in-up">Sign In</h4>
-	</a>
+	</a> -->
+	<div class="dropdown">
+			<a class="btn assistuBtn dropdown-toggle" href="/login" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Sign In
+				</a>
+			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<a class="dropdown-item" href="/register">Register</a>
+
+			</div>
+		</div>
+
 </nav>
