--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -1,7 +1,11 @@
-<%- include("partials/header") -%>
-<%- include("partials/navbarLogout") -%>
+<%- include("partials/header") -%> <%- include("partials/navbarLogout") -%>
 
-<h5 class="text-right" style="position: absolute;top: 0.4rem;right: 1rem;text-shadow: 1px 1px #f2f7f0;"><%= clientDisplayName %></h5>
+<h5
+	class="text-right"
+	style="position: absolute;top: 0.4rem;right: 2rem;text-shadow: 1px 1px #f2f7f0;"
+>
+	<%= clientDisplayName %>
+</h5>
 
 <div class="container" style="margin-top: 4rem;">
 	<h1>Congratulations</h1>
