correct login and logout button functions

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,7 @@ opacity: 0.8;
 border: none;
 }
 
-.btn-secondary:hover {
+.assistUBtn:hover {
     color: #e5c17b !important;
     background-color: #63152f !important;
 }
