--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -25,8 +25,10 @@
 					<a class="dropdown-item" href="/register">Register</a>
 				</div>
 			</div>
-			<button type="button" class="btn btn-secondary assistUBtn">
-				<a  href="/login">Login</a>
+			<button id="login-btn" type="submit" class="btn btn-secondary assistUBtn">
+					<form id="login" action="/login">
+						Login
+						</form>
 			</button>
 		</div>
 </nav>
