--- a/views/partials/navbarLogout.ejs
+++ b/views/partials/navbarLogout.ejs
@@ -26,7 +26,7 @@
 					</div>
 				</div>
 				<button id="logout-btn" type="submit" class="btn btn-secondary assistUBtn">
-					<form id="#logout" action="/logout">
+					<form id="logout" action="/logout">
 					Logout
 					</form>
 				</button>
