--- a/views/history.ejs
+++ b/views/history.ejs
@@ -10,6 +10,53 @@
 
 <div class="container" style="margin-top: 4rem;">
 	<h1>Order History</h1>
-	
-</div>
+</div>	
+
+	<div class="card border-warning history-card shadow" style="border-width: 2px;">
+		<div class="row no-gutters">
+			<div class="col-md-4 history-card-img">
+				<img src="images/user.svg" class="card-img" alt="..." width="180" height="180">
+			</div>
+			<!-- <div class="row"> -->
+				<div class="card-body">
+					<h5 class="card-title">Fixer Company Name</h5>
+					<div class="container">
+						<div class="row">
+							<div class="col">
+								<h6 id="fixer-comp-name">Service Type</h6>
+							</div>
+							<div class="col">
+								<h6 id="hourly-rate" >$ per hour</h6>
+							</div>
+							</div>
+							<div class="row">
+								<div class="col">
+								<h6 id="order-date">Order Date</h6>
+								</div>
+								<div class="col">
+								<h6 id="hourly-duration" >MM/DD/YYYY</h6>
+								</div>
+							</div>
+							<div class="row">
+									<div class="col">
+									<h6 id="order-date">Service Date</h6>
+									</div>
+									<div class="col">
+									<h6 id="hourly-duration" >MM/DD/YYYY</h6>
+									</div>
+							</div>
+							<div class="row">
+									<div class="col">
+									<h6 id="order-date">Fixer Rate</h6>
+									</div>
+									<div class="col">
+									<h6 id="hourly-duration" >@ # Hours</h6>
+									</div>
+							</div>
+						<p class="card-text"><small class="text-muted">Total $100</small></p>
+					<!-- </div> -->
+				</div>
+			</div>
+		</div>
+	</div>
 <%- include("partials/footer") -%>
