--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,8 @@
 <!-- service section begins -->
 <section class="container services-section text-center">
 	<h1 class="sec-title">Invest In Your Convenience</h1>
-	
+	<h5 class="">Select Your Fixer Service Type</h5>
+
 	<div class="services-btns container">
 		<div class="row row-service-icons">
 			<div class=" col-lg-4 col-md-6 col-sm-12">
