handle the case when user have no previous orders

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -275,7 +275,7 @@
 		<button
 			type="submit"
 			class="btn btn-lg btn-warning"
-			style="background-color: #F9D276; width:100%; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0;">
+			style="background-color: #F9D276; width:100%; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0; border-radius: 2rem;">
 			Send a message
 		</button>
 	</form>	
