--- a/views/noOrder.ejs
+++ b/views/noOrder.ejs
@@ -2,8 +2,8 @@
 <%- include("partials/navbarLogout") -%>
 <h5 class="text-right" style="position: absolute;top: 0.4rem;right: 2rem;text-shadow: 1px 1px #f2f7f0;"><%= clientDisplayName %></h5>
 <div class="thanks-center">
-    <h2 class="display-4">Login Success!</h2>
-    <p class="lead">Development in progress! Stay tuned for updates.</p>
+    <h2 class="display-4">No Previous Orders!</h2>
+    <p class="lead">Dear user, please make some orders to see the list.</p>
     <a class="btn btn-primary btn-lg" href="/" role="button"
     style="background-color: #F9D276; font-family: 'Fredoka One', cursive; border-radius: 2rem; color: #63032e; border-style: none;"
     >Return Home</a>
