--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,10 +43,20 @@ border: none;
 	color: #e5c17b !important;
 	background-color: #63152f !important;
 }
+.dropdown-menu{
+	border-radius: 2rem;
+	opacity: 0.9;
+}
+.dropdown-item{
+	padding: .25rem 2.2rem;
+}
 /*! Landing Page */
 
 .sec-title {
 	margin: 1.5rem 0 0 0;
+}
+.lead{
+	margin: 3%;
 }
 
 /*! Navbar */
@@ -266,6 +276,7 @@ section.works-sec {
 .pressed-Service{
 	border-radius: 2.5rem;
 	background-color: #e1e3f0;
+	box-shadow: none;
   }
 .card-for-fixer{
 	border-radius: 3rem;
