--- a/views/partials/navbarLogin.ejs
+++ b/views/partials/navbarLogin.ejs
@@ -22,7 +22,8 @@
 				</button>
 				<div class="dropdown-menu">
 					<!-- Dropdown menu links -->
-					<a class="dropdown-item" href="/register">Register</a>
+					<a class="dropdown-item" style="border-radius: 2rem;" href="/register"><i class="far fa-clipboard" style="color:#63032e; margin-right:0.5rem;" aria-hidden="true"></i
+						>Register</a>
 				</div>
 			</div>
 			<button id="login-btn" type="submit" class="btn btn-secondary assistUBtn">
