--- a/views/partials/navbarLogout.ejs
+++ b/views/partials/navbarLogout.ejs
@@ -22,7 +22,8 @@
 					</button>
 					<div class="dropdown-menu">
 						<!-- Dropdown menu links -->
-						<a class="dropdown-item" href="/history">Order History</a>
+						<a class="dropdown-item" style="border-radius: 2rem;" href="/history"><i class="fa fa-history" style="color:#63032e; margin-right:0.5rem;" aria-hidden="true"></i
+							>Order History</a>
 					</div>
 				</div>
 				<button id="logout-btn" type="submit" class="btn btn-secondary assistUBtn">
