--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -16,7 +16,7 @@
 		class="btn btn-primary btn-lg"
 		href="/"
 		role="button"
-		style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none;"
+		style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius: 2rem;"
 		>Return Home</a
 	>
 </div>
