--- a/views/history.ejs
+++ b/views/history.ejs
@@ -6,7 +6,7 @@
 </div>
 <% orderList.forEach(function(order){ %>
 <div class="card border-warning history-card shadow" style="border-width: 2px;">
-	<div class="row no-gutters">
+	<div class="row no-gutters flex-for-tab">
 		<div class="col-md-4 history-card-img">
 			<img src="images/user.svg" class="card-img" alt="..." width="180" height="180" />
 		</div>
