Make minor updates to header, confirmation, history, loginSuccess and noOrder ejs files

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -12,7 +12,7 @@
 	<h2>Order Successfully Received</h2>
 	<h6>Order Accepted</h6>
 	<img src="images/confirm-img.png" alt="" />
-	<h4>Your order is complete</h4>
+	<h4>Your order is underway. Please stand-by for details.</h4>
 
 	<p>Thank you for your order. Please stay tuned for order updates.</p>
 </div>
