--- a/views/history.ejs
+++ b/views/history.ejs
@@ -47,13 +47,13 @@
 				</div>
 				<div class="row">
 						<div class="col">
-							<h6 id="service-date-title">Order Status</h6>
+							<h6 id="order-status-title">Order Status</h6>
 						</div>
 						<div class="col">
 							<% if (order.bookingCashConfirm) {%>
-							<h6 id="service-date">Order Received</h6>
+							<h6 id="order-status-received">Order Received</h6>
 							<% } else { %>
-							<h6 id="service-date">Order Incomplete</h6>
+							<h6 id="order-status-incomplete">Order Incomplete</h6>
 							<% } %>
 						</div>
 					</div>
