--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+		<!-- Social Media Share Links -->
+		<meta 
+			property="image"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
+		/>
+		<meta
+			property="og:image"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
+		/>
+		<meta property="og:title" content="AssistU | On-Demand Household and Personal Services" />
+		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
+		<meta property="og:description" content="AssistU | On-Demand Household and Personal Services" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:locale" content="hi_IN" />
+
 		<!-- Author Information -->
 		<meta
 			name="Vaibhav Srivastava"
@@ -20,35 +37,18 @@
 			content="Kathy Lambert GitHub Portfolio"
 			href="https://github.com/CodeMeKathy"
 		/>
-
-		<!-- Social Media Share Links -->
-		<meta property="og:title" content="AssistU | On-Demand Household and Personal Services" />
-		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
-		<meta property="og:description" content="AssistU | On-Demand Household and Personal Services" />
-		<meta property="og:type" content="website" />
-		<meta property="og:locale" content="en_US" />
-		<meta property="og:locale" content="hi_IN" />
-		<meta
-			property="og:image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
-		/>
-		<meta
-			property="image"
-			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/images/helpingHands-300-200.png?raw=true"
-		/>
-
 		<title>AssistU | On-Demand Household and Personal Services</title>
 		<!-- font-awesome -->
 		<link href="css/fa-all.css" rel="stylesheet" />
 		<!-- favicon -->
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-		<meta name="msapplication-TileColor" content="#e5d8d9" />
-		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
-		<meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=xQOQ6mNkrd">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=xQOQ6mNkrd">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=xQOQ6mNkrd">
+    <link rel="manifest" href="/site.webmanifest?v=xQOQ6mNkrd">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg?v=xQOQ6mNkrd" color="#907f9f">
+    <link rel="shortcut icon" href="/favicon.ico?v=xQOQ6mNkrd">
+    <meta name="msapplication-TileColor" content="#f1f7f0">
+    <meta name="theme-color" content="#f1f7f0">
 		<!-- google fonts -->
 		<link
 			href="https://fonts.googleapis.com/css?family=Domine|Fredoka+One&display=swap"
